# ESP32-ESP-IDF-SPIFFS-Web-Server

./: partitions.csv  sdkconfig  sdkconfig.old
data/: index.html  myfile.txt  script.js  styles.css  submit.html
main/: CMakeLists.txt  Kconfig.projbuild  connect_wifi.c  connect_wifi.h  firmware_update.c  machine_status.c  main.c  main.h  mqtt_stuff.c  ota_stuff.c  received_messages.c  storage.c  url_stuff.c  url_stuff.h  web_server.c  wifi_setup.c  wifi_setup.h
main/inc/: firmware_update.h  machine_status.h  main.h  mqtt_stuff.h  ota_stuff.h  received_messages.h  storage.h  url_stuff.h  web_server.h  wifi_setup.h
